# nomen-audio

./: .gitignore  README.md  nomen-sidecar.spec  pyproject.toml
data/UCS/: UCS v8.2.1 Top Level Categories.xlsx
docs/: UCS.md  architecture.md  data-reference.md  installation.md  metadata-schema.md  pipeline.md
frontend/: eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/src/: app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/lib/: health.ts  sidecar.ts
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: README.md  build-sidecar.ps1  build.ps1  test-sidecar.ps1
src/: README.md
src/app/: __main__.py  errors.py  main.py  models.py  paths.py
src/app/db/: mappers.py  repository.py  schema.py
src/app/metadata/: reader.py  writer.py
src/app/ml/: acoustic_descriptions.json  captioner.py  clap_compat.py  classifier.py  label_builder.py  model_manager.py  suggestions.py
src/app/routers/: ucs.py  (+4 more)
tests/: conftest.py  test_analyze_api.py  test_captioner.py  test_classifier.py  test_custom_fields.py  test_errors.py  test_fallback.py  test_files_api.py  test_flagging.py  test_health.py  test_label_builder.py  test_metadata_reader.py  test_model_manager.py  test_models.py  test_models_api.py  test_new_aswg_fields.py  test_paths.py  test_repository.py  test_riff_writer.py  test_settings.py  test_suggestions.py  test_ucs_api.py  test_ucs_engine.py  test_ucs_filename.py  test_write_api.py
(+41 files in other folders)
