[project]
name = "nomen-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.115.0",
    "hf-xet>=1.2.0",
    "librosa>=0.10.2.post1",
    "msclap>=1.3.4",
    "openpyxl>=3.1.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "uvicorn>=0.34.0",
    "wavinfo>=4.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"] 
